--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 django = "^5.1.4"
 djangorestframework = "^3.15.2"
+fastapi = "^0.115.6"
+uvicorn = "^0.34.0"
 
 
 [build-system]
