--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.1.4"
 djangorestframework = "^3.15.2"
 fastapi = "^0.115.6"
 uvicorn = "^0.34.0"
+flask = "^3.1.0"
+flask-restful = "^0.3.10"
 
 
 [build-system]
