--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.115.6"
 uvicorn = "^0.34.0"
 flask = "^3.1.0"
 flask-restful = "^0.3.10"
+pydantic-settings = "^2.7.0"
 
 
 [build-system]
