--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.34.0"
 flask = "^3.1.0"
 flask-restful = "^0.3.10"
 pydantic-settings = "^2.7.0"
+sqlalchemy = "^2.0.36"
 
 
 [build-system]
