--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flask = "^3.1.0"
 flask-restful = "^0.3.10"
 pydantic-settings = "^2.7.0"
 sqlalchemy = "^2.0.36"
+alembic = "^1.14.0"
 
 
 [build-system]
