--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flask-restful = "^0.3.10"
 pydantic-settings = "^2.7.0"
 sqlalchemy = "^2.0.36"
 alembic = "^1.14.0"
+black = "^24.10.0"
 
 
 [build-system]
