--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic-settings = "^2.7.0"
 sqlalchemy = "^2.0.36"
 alembic = "^1.14.0"
 black = "^24.10.0"
+aiosqlite = "^0.20.0"
 
 
 [build-system]
