--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ sqlalchemy = "^2.0.36"
 alembic = "^1.14.0"
 black = "^24.10.0"
 aiosqlite = "^0.20.0"
+flask-sqlalchemy = "^3.1.1"
 
 
 [build-system]
