--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ alembic = "^1.14.0"
 black = "^24.10.0"
 aiosqlite = "^0.20.0"
 flask-sqlalchemy = "^3.1.1"
+flasgger = "^0.9.7.1"
 
 
 [build-system]
